--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -63,5 +63,5 @@
     {% endfor%}
 </div>
 <!-- /container -->
-<script src="/js/modernizr.custom.js"></script>
-<script src="/js/toucheffects.js"></script>
+<script type="text/javascript" src = {{ "js/modernizr.custom.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "js/toucheffects.js" | prepend: site.baseurl }}></script>
