update contact and portfolio

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <div class="row contact-title">
 	<div class="title ct-title">CONTACT</div>
     <div class="ct-icon">
-    	<img src="../images/contact-icon.svg" alt="">
+    	<img src="{{ "images/contact-icon.svg" | prepend: site.baseurl }}" alt="">
     </div>
 </div>
 <div class="row">
