--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-1-6">
     	<div class="pic">
-        	<img src="../images/portrait.svg" alt="portrait">
+            <img src="{{ 'images/portrait.svg' | prepend: site.baseurl }}" alt="">
         </div>
     </div>
 </div>
@@ -14,7 +14,7 @@
 <div class="row">
 	<div class="col-1-2 col-offset-1-12">
 		<div class="title-line">
-        	<img src="../images/blog-titleline.svg" alt="" style="width:100%;">
+        	<img src="{{ 'images/blog-titleline.svg' | prepend: site.baseurl }}" alt="" style="width:100%;">
         </div>
     </div>   
 </div>
