--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -3,8 +3,7 @@
 		<div class="title blog-title">BLOG</div>
 		<div class="tag-box bg-yellow">
 			<div class="tag-arrow"></div>
-			<div class="tag">HTML</div>
-			<div class="tag">CSS</div>
+			<div class="tag">Github</div>
 			<div class="tag">Javascript</div>
 		</div>
 	</div>
@@ -13,7 +12,7 @@
 		{% for post in site.categories.blog %}
 			<section class='single-post'>
 				<div class="sl-h1 single-post-title"><a href="{{ post.url }}">{{ post.title }}</a></div>
-				<div class='single-post-tags'>Tags: <span> Tag1 </span> <span> Tag2 </span></div>
+				<div class='single-post-tags'>Tags: <span> {{ post.tag }}</span></div>
 				<div class="single-post-content">
 					{{ post.content | split:"<!-- more -->" | first}}
 					{% if post.content | size > 300 %}
