Update all the URL

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,27 +7,27 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "css/layout.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/layout.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" type="text/css" href="css/lib/font-awesome.min.css">
     
-    <link rel="stylesheet" href="{{ "css/grid.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/grid.css" | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" href="{{ "css/portfolio.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/portfolio.css" | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" href="{{ "css/blog.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/blog.css" | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" href="{{ "css/MatrixThumbnails.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/MatrixThumbnails.css" | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" href="{{ "css/about.css" | prepend: site.baseurl }}">
-
-
-    <link rel="stylesheet" href="{{ "css/contact.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/about.css" | prepend: site.baseurl }}">
 
 
-    <link rel="stylesheet" href="{{ "css/3DCube.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/contact.css" | prepend: site.baseurl }}">
 
-    <link rel="stylesheet"  href="{{ "css/slicebox.css" | prepend: site.baseurl }}" />
+
+    <link rel="stylesheet" href="{{ "/css/3DCube.css" | prepend: site.baseurl }}">
+
+    <link rel="stylesheet"  href="{{ "/css/slicebox.css" | prepend: site.baseurl }}" />
     
-    <link rel="stylesheet"  href="{{ "css/post.css" | prepend: site.baseurl }}" />
+    <link rel="stylesheet"  href="{{ "/css/post.css" | prepend: site.baseurl }}" />
 
 </head>
