--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,9 +41,9 @@ layout: default
 		{% include nav.html%}
 	</div>
 </div>
-<script type="text/javascript" src = {{ "js/lib/jquery.min.js" | prepend: site.baseurl }}></script>
-<script type="text/javascript" src = {{ "js/lib/jquery.easing.1.3.js" | prepend: site.baseurl }}></script>
-<script type="text/javascript" src = {{ "js/layout.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/lib/jquery.min.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/lib/jquery.easing.1.3.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/layout.js" | prepend: site.baseurl }}></script>
 <script>
 	$(function(){
 		view.initialize();
