--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,7 +3,7 @@
         PORTFOLIO
     </div>
     <div class="pf-icon">
-        <img src="{{ "images/portfolio-icon.svg" | prepend: site.baseurl }}" alt="">
+        <img src="{{ "/images/portfolio-icon.svg" | prepend: site.baseurl }}" alt="">
     </div>
 </div>
 <div class="clean"></div>
@@ -53,7 +53,7 @@
     {% for post in site.categories.project %}
         <div class="col-1-4 col-md-1-3 cs-style-4">
             <figure>
-                <div><img src="images/project/{{ post.imageURL }}" alt="img05"></div>
+                <div><img src="/images/project/{{ post.imageURL }}" alt="img05"></div>
                 <figcaption>
                 <h3>{{ post.title }}</h3>
                 <a href="{{ post.url | prepend: site.baseurl }}">Take a look</a>
@@ -63,5 +63,5 @@
     {% endfor%}
 </div>
 <!-- /container -->
-<script type="text/javascript" src = {{ "js/modernizr.custom.js" | prepend: site.baseurl }}></script>
-<script type="text/javascript" src = {{ "js/toucheffects.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/modernizr.custom.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/toucheffects.js" | prepend: site.baseurl }}></script>
