--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,9 @@
     <meta name="description" content="{{ site.description }}">
 
     <link rel="stylesheet" href="{{ "/css/layout.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" type="text/css" href="css/lib/font-awesome.min.css">
     
+    <link rel="stylesheet" href="{{ "/css/lib/font-awesome.min.css" | prepend: site.baseurl }}">
+
     <link rel="stylesheet" href="{{ "/css/grid.css" | prepend: site.baseurl }}">
 
     <link rel="stylesheet" href="{{ "/css/portfolio.css" | prepend: site.baseurl }}">
