--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,9 +3,9 @@ layout: default
 title: Project
 ---
 {{content}}
-<script type="text/javascript" src = {{ "js/modernizr.custom.46884.js" | prepend: site.baseurl }}></script>
-<script type="text/javascript" src = {{ "js/lib/jquery.min.js" | prepend: site.baseurl }}></script>
-<script type="text/javascript" src = {{ "js/jquery.slicebox.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/modernizr.custom.46884.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/lib/jquery.min.js" | prepend: site.baseurl }}></script>
+<script type="text/javascript" src = {{ "/js/jquery.slicebox.js" | prepend: site.baseurl }}></script>
 <script type="text/javascript">
 	$(function() {
 		
