--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,39 @@
 ---
 layout: default
+title: blog
 ---
 <div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+	<div class="row">
+		<div class="col-10-12 col-offset-1-12 header-img">
+			<img src="../images/project/project.jpeg" alt="image">
+		</div>
+	</div>
+	<div class="clean"></div>
+	
+	<div class="row">
+		<div class="header">
+			<h1>{{ post.title }}</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="attributes">
+			<p>{{ post.date }} ● {{ post.tag }}</p>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-10-12 col-offset-1-12 paragraph">
+			{{content}}
+		</div>
+	</div>
+	
+	<div class="clean"></div>
+	
+	
+	<div class="row">
+		<div class="col-10-12 col-offset-1-12 footer">
+			<hr>
+			<p>This is footer -  shareable button/comment. </p>
+		</div>
+	</div>
 </div>
