--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -53,7 +53,7 @@
     {% for post in site.categories.project %}
         <div class="col-1-4 col-md-1-3 cs-style-4">
             <figure>
-                <div><img src="/images/project/{{ post.imageURL }}" alt="img05"></div>
+                <div><img src="{{site.baseurl }}/images/project/{{ post.imageURL }}" alt="img05"></div>
                 <figcaption>
                 <h3>{{ post.title }}</h3>
                 <a href="{{ post.url | prepend: site.baseurl }}">Take a look</a>
