--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,28 +7,12 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "/css/layout.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/3dBlog.min.css" | prepend: site.baseurl }}">
     
     <link rel="stylesheet" href="{{ "/css/lib/font-awesome.min.css" | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" href="{{ "/css/grid.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet"  href="{{ "/css/lib/slicebox.css" | prepend: site.baseurl }}" />
 
-    <link rel="stylesheet" href="{{ "/css/portfolio.css" | prepend: site.baseurl }}">
-
-    <link rel="stylesheet" href="{{ "/css/blog.css" | prepend: site.baseurl }}">
-
-    <link rel="stylesheet" href="{{ "/css/MatrixThumbnails.css" | prepend: site.baseurl }}">
-
-    <link rel="stylesheet" href="{{ "/css/about.css" | prepend: site.baseurl }}">
-
-
-    <link rel="stylesheet" href="{{ "/css/contact.css" | prepend: site.baseurl }}">
-
-
-    <link rel="stylesheet" href="{{ "/css/3DCube.css" | prepend: site.baseurl }}">
-
-    <link rel="stylesheet"  href="{{ "/css/slicebox.css" | prepend: site.baseurl }}" />
-    
-    <link rel="stylesheet"  href="{{ "/css/post.css" | prepend: site.baseurl }}" />
+    <link rel="stylesheet"  href="{{ "/css/lib/custom.css" | prepend: site.baseurl }}" />
 
 </head>
